fix for missing border on list-group-item hover

--- a/less/theme.less
+++ b/less/theme.less
@@ -282,6 +282,7 @@ body,
   border: none;
   border-bottom: 1px solid @list-group-border;
   border-radius: 0;
+  margin-bottom: 0;
 
   &:first-child {
     .border-top-radius(0);
